force-app/main/default/objects/Task_Group_Def__mdt/Task_Group_Def__mdt.object-meta.xml
<CustomObject>
    <label>Task Group Def</label>
    <pluralLabel>Task Group Defs</pluralLabel>
</CustomObject>