force-app/main/default/objects/Task_Group_Def__mdt/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <label>Condition Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>