force-app/main/default/objects/Task_Group_Def__mdt/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <label>Letter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>