force-app/main/default/objects/Task_Group_Def__mdt/fields/Owner_Label__c.field-meta.xml
<CustomField>
    <fullName>Owner_Label__c</fullName>
    <label>Owner Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>